--- a/hedges-bridges/src/Styles/Properties.css
+++ b/hedges-bridges/src/Styles/Properties.css
@@ -23,7 +23,11 @@
 }
 
 .imageViewerOverlay{
-    width: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: fit-content;
     height: fit-content;
     background-color: #efce;
     position: absolute;
@@ -34,6 +38,11 @@
     margin: 16px;
     border-radius: 12px;
 }
+
+.imageViewerDescription {
+    color: #0D151C;
+}
+
 
 .imageViewerContent {
     display: flex;
@@ -77,12 +86,6 @@ button{
     margin-top: 28px;
 
 }
-.imageViewerOverlay p{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    
-}
 
 .imageViewerCloseBtn{
     border: 1px solid #0D151C;
@@ -101,32 +104,6 @@ button{
 
 }
 
-.description{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 18px;
-    width: 100%;
-    box-sizing: border-box;
-    word-wrap: break-word;
-    text-wrap: wrap;
-
-}
-
-.description p{
-    display: flex;
-    justify-content: center;
-    color: #0D151C;
-    padding-top: 11px;
-    text-align: center;
-    text-wrap: wrap;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    width: 100%;
-    box-sizing: border-box;
-
-
-}
 .propImage{
     display: flex;
     justify-content: center;
@@ -143,6 +120,7 @@ button{
     border-radius: 12px;
 
 }
+
 .imageCount{
     position: absolute;
     top: 28%;
@@ -206,12 +184,13 @@ button{
     left: 0;
     bottom: 80%;
     color: #efce;
-    padding: 8px;
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid #a48d07;
     border-radius: 2px;
+    
  }
  .modalContent ul li{
     display: flex;
@@ -223,6 +202,7 @@ button{
     color: #a48d07;
     font: 1.2em sans-serif;
  }
+ 
 .imageContainer{
     width: 100%;
     height: 200px;
@@ -239,15 +219,15 @@ button{
 
     .imageViewerOverlay{
         width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin-top: 42%;
     }
 
-    .description p{
-        width: fit-content;
-        height: fit-content;
-        margin: 0 8px;
+    .propContainer{
+        margin-bottom: 0;
     }
-
 }
 
 @media (max-width:350px) {
